--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/laptop.jpg" alt="" /></span>
 							<h3>ASP.NET Core Web App</h3>
-							<p>In this project, I use the Model-View-Controller (MVC) principle to create a scheduling app and I include an API that also 
-								allows users to check the weather.</p>
+							<p>In this project, I used the Model-View-Controller (MVC) principle to create a concert scheduling app that uses a SQL database for storage.</p>
 							<ul class="actions special">
 								<li><a href="https://showschedulerapp.azurewebsites.net/" class="button">See the website</a></li>								
 							</ul>							
