--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<h3>ASP.NET Core Web App</h3>
 							<p>In this project, I used the Model-View-Controller (MVC) principle to create a concert scheduling app that uses a SQL database for storage.</p>
 							<ul class="actions special">
-								<li><a href="https://showschedulerapp.azurewebsites.net/" class="button">See the website</a></li>								
+								<li><a href="https://github.com/EricDCastaneda/ShowScheduler" class="button">See the project code</a></li>								
 							</ul>							
 						</div>
 						<div class="col-4 col-12-medium">
